# daily_scale

./: Cargo.toml  README.md  flake.nix
src/: cli.rs  fret_board.rs  lib.rs  main.rs  notes.rs  scales.rs  tunings.rs
src/lib/: cli.rs  fret_board.rs  notes.rs  scales.rs  tunings.rs
